# ckm

./: .gitignore  AUTHORS  CMakeLists.txt  HOW.TO.COMPILE.ON.UBUNTU.txt  LICENSE  README
data/scripts/: 230.key-manager-change-data-dir.patch.sh.in  230.key-manager-migrate-dkek.patch.sh  231.key-manager-change-user.patch.sh  231.key-manager-migrate-dkek.patch.sh.in  232.key-manager-change-user.patch.sh.in  CMakeLists.txt  create_schema.sql  drop_all.sql  migrate_1.sql  migrate_2.sql  migrate_3.sql
src/: CMakeLists.txt
src/include/: key-manager.h
src/include-tizen/ckmc/: ckmc-platform-codes.h
src/include-ubuntu/ckmc/: ckmc-platform-codes.h
src/include/ckm/: ckm-certificate.h  ckm-control.h  ckm-echo.h  ckm-error.h  ckm-key.h  ckm-manager-async.h  ckm-manager.h  ckm-password.h  ckm-pkcs12.h  ckm-raw-buffer.h  ckm-type.h  key-manager-control.h  key-manager.h
src/include/ckmc/: ckmc-control.h  ckmc-error.h  ckmc-manager.h  ckmc-type.h
src/listener/: CMakeLists.txt  listener-daemon.cpp
src/manager/: CMakeLists.txt
src/manager/client/: Control.cpp  client-certificate-impl.cpp  client-certificate-impl.h  client-certificate.cpp  client-common.cpp  client-common.h  client-control.cpp  client-echo.cpp  client-error.cpp  client-key-impl.cpp  client-key-impl.h  client-key.cpp  client-manager-impl.cpp  client-manager-impl.h  client-manager.cpp
src/manager/client-async/: async-request.cpp  async-request.h  client-manager-async-impl.cpp  client-manager-async-impl.h  client-manager-async.cpp  connection-thread.cpp  connection-thread.h  descriptor-set.cpp  descriptor-set.h  encryption-receiver.cpp  encryption-receiver.h  ocsp-receiver.cpp  ocsp-receiver.h  receiver.cpp  receiver.h  service.cpp  service.h  storage-receiver.cpp  storage-receiver.h
src/manager/client-capi/: ckmc-control.cpp  ckmc-error.cpp  ckmc-manager.cpp  ckmc-type-converter.cpp  ckmc-type-converter.h  ckmc-type.cpp
src/manager/common/: Base64.cpp  Base64.h  aesCrypt.cpp  aesCrypt.h  algo-param.cpp  base64.cpp  base64.h  buffer-conversion.h  certificate-config.cpp  certificate-config.h  certificate-impl.cpp  certificate-impl.h  certificate-store.cpp  certificate-store.h  client-certificate-impl.cpp  client-certificate-impl.h  client-key-impl.cpp  connection-info.h  crypto-init.cpp  crypto-init.h  crypto.cpp  crypto.h  data-type.cpp  data-type.h  db-crypto.cpp  db-crypto.h  descriptor-set.cpp  descriptor-set.h  digest.cpp  digest.h  exception.cpp  exception.h  file-lock.h  generic-key.cpp  generic-key.h  key-aes-impl.cpp  key-aes-impl.h  key-ecdsa.h  key-impl.cpp  key-impl.h  (+17 more)
src/manager/crypto/generic-backend/: algo-validation.h  exception.h  gkey.h  gobj.h  gstore.h  id.h  token.h
src/manager/crypto/platform/: decider.cpp  decider.h
src/manager/crypto/sw-backend/: crypto-service.cpp  crypto-service.h  crypto.h  internals.cpp  internals.h  key.cpp  key.h  obj.cpp  obj.h  store.cpp  store.h
src/manager/crypto/tz-backend/: key.cpp  key.h  obj.cpp  obj.h  store.cpp  (+1 more)
src/manager/initial-values/: BufferHandler.cpp  BufferHandler.h  CertHandler.cpp  CertHandler.h  DataHandler.cpp  DataHandler.h  EncodingType.h  InitialValueHandler.cpp  InitialValueHandler.h  InitialValuesFile.cpp  InitialValuesFile.h  KeyHandler.cpp  KeyHandler.h  NoCharactersHandler.cpp  NoCharactersHandler.h  PermissionHandler.cpp  PermissionHandler.h  SWKeyFile.cpp  SWKeyFile.h  initial-value-loader.cpp  initial-value-loader.h  parser.cpp  parser.h  xml-utils.cpp  xml-utils.h
src/manager/main/: communication-manager.h  credentials.h  cynara-mockup.cpp  cynara.cpp  cynara.h  generic-event.h  generic-socket-manager.cpp  generic-socket-manager.h  key-manager-main.cpp  key-manager-util.cpp  key-manager-util.h  message-service.h  service-messages.h  service-thread.h  smack-check.cpp  smack-check.h  socket-2-id-mockup.cpp  socket-2-id-wrapper.cpp  socket-2-id.cpp  socket-2-id.h  socket-manager.cpp  socket-manager.h  thread-service.cpp  thread-service.h
src/manager/service/: CryptoService.cpp  CryptoService.h  DBCryptoModule.cpp  DBCryptoModule.h  FileSystem.cpp  FileSystem.h  KeyProvider.h  OCSP.h  access-control.cpp  access-control.h  certificate-config.h  certificate-store.cpp  ckm-logic.cpp  ckm-logic.h  ckm-service.cpp  ckm-service.h  crypto-backend.h  crypto-logic.cpp  crypto-logic.h  crypto-request.h  crypto.h  db-crypto.cpp  db-crypto.h  db-row.h  digest.h  echo.cpp  echo.h  encryption-logic.cpp  encryption-logic.h  encryption-service.cpp  encryption-service.h  file-lock.cpp  file-lock.h  file-system.cpp  file-system.h  glib-logic.cpp  glib-logic.h  glib-service.cpp  glib-service.h  iencryption-service.h  (+11 more)
src/manager/sqlcipher/: config.h  sqlcipher.h
src/pam_plugin/: CMakeLists.txt  pam-key-manager-plugin.cpp
systemd/: CMakeLists.txt  central-key-manager-api-control.socket  central-key-manager-api-encryption.socket  central-key-manager-api-ocsp.socket  central-key-manager-api-storage.socket  central-key-manager-echo.socket  central-key-manager-listener.service  central-key-manager-listener.service.in  central-key-manager.service  central-key-manager.service.in  key-manager-echo.socket  key-manager.service  key-manager.target
tests/: CMakeLists.txt  DBFixture.cpp  DBFixture.h  XML_1_okay.xml  XML_1_wrong.xml  XML_1_wrong.xsd  XML_2_structure.xml  XML_3_encrypted.xml  XML_3_encrypted.xsd  XML_4_device_key.xml  XML_4_device_key.xsd  colour_log_formatter.cpp  colour_log_formatter.h  main.cpp  test-key-provider.cpp  test_comm-manager.cpp  test_common.cpp  test_common.h  test_db_crypto.cpp  test_descriptor-set.cpp  test_encryption-scheme.cpp  test_safe-buffer.cpp  test_serialization.cpp  test_sql.cpp  test_watched-thread.h  test_xml-parser.cpp
tests/encryption-scheme/: CMakeLists.txt  encryption-scheme.p12  generate-db.cpp  scheme-test.cpp  scheme-test.h  smack-access.cpp  smack-access.h
tests/encryption-scheme/db/: db-7654  db-key-7654  key-7654
tools/: CMakeLists.txt  ckm_so_loader.cpp  ckm_tool.cpp
tools/ckm_db_tool/: CMakeLists.txt  ckm-logic-ext.cpp  ckm-logic-ext.h  ckm_db_tool.cpp  db-crypto-ext.cpp  db-crypto-ext.h
(+56 files in other folders)
